# powerline

./: Cargo.toml
.cargo/: config.toml
src/: colored_stream.rs  main.rs
src/segments/: cwd.rs  exitcode.rs  git.rs  hostname.rs  mod.rs  openstack.rs  time.rs  user.rs
src/segments/k8s/: kubeconfig.rs  kubeconfig_error.rs  mod.rs
