cargo-features = ["strip"]

[package]
name = "powerline"
version = "0.1.0"
authors = ["Martin Ivicic <martin.ivicic@pan-net.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
# panic = "abort"
strip = true

[dependencies]
chrono = "0.4.19"
dirs = "3.0.2"
libc = "0.2.99"
argh = "0.1.5"
hostname = "0.3.1"
git2 = { version="0.13.21", default-features=false }
serde = { version="1.0.127", features=[ "derive" ] }
serde_json = "1.0.66"
thiserror = "1.0.26"
base64 = "0.13.0"
serde_yaml = "0.8.17"
